--- a/css/reset.css
+++ b/css/reset.css
@@ -17,6 +17,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	-webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
