--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@ form input, form textarea {
     margin-bottom: 20px;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
+    
 
 }
 
@@ -181,7 +182,7 @@ form input[type="text"], form input[type="email"], textarea {
     padding: 10px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: black;
     border: 1px solid #b90707;
     width: 60%;
 }
